--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 1.0
 License: GPL-3
 Title: Grid density object with defined limits (server)
 Description: Grid density object with defined limits (server)
-AggregateMethods: grid.density.limits
+AggregateMethods: grid.density.limits, minmax
 Collate:
     'grid.density.limits.r'
+    'minmax.r'
