Typo in AssignMethods

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ License: GPL-3
 Title: Grid density object with defined limits (server)
 Description: Grid density object with defined limits (server)
 AggregateMethods: grid.density.limits
-AssignMethods: minmax
+AssignMethods: MinMax
 Collate:
     'grid.density.limits.r'
     'minmax.r'
