--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 1.0
 License: GPL-3
 Title: Grid density object with defined limits (server)
 Description: Grid density object with defined limits (server)
-AggregateMethods: grid.density.limits
-AssignMethods: MinMax
+AggregateMethods: grid.density.limits, MinMax
 Collate:
     'grid.density.limits.r'
     'minmax.r'
